[gd_scene load_steps=13 format=3 uid="uid://l28doxixtyva"]

[ext_resource type="Script" uid="uid://462wwodwaxrq" path="res://Scripts/Enemies/green_zomb_enemy.gd" id="1_h5th0"]
[ext_resource type="PackedScene" uid="uid://dirwp38w8mv8g" path="res://Scenes/Components/run_component.tscn" id="1_waa7g"]
[ext_resource type="PackedScene" uid="uid://7r71nhjr87r" path="res://Scenes/Components/on_jump_component.tscn" id="2_72t3h"]
[ext_resource type="Texture2D" uid="uid://bpw0wcr0cb7pg" path="res://Graphics/Enemy/GreenZomb.png" id="3_e6tu7"]
[ext_resource type="Script" uid="uid://dd11a8dn3dn3l" path="res://Scripts/Enemies/jump_when_wall_component.gd" id="5_7gnpx"]
[ext_resource type="PackedScene" uid="uid://bg8806v1rj0h7" path="res://Scenes/Components/on_ground_pound_component.tscn" id="6_knswg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fudtn"]
atlas = ExtResource("3_e6tu7")
region = Rect2(1, 26, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_haacd"]
atlas = ExtResource("3_e6tu7")
region = Rect2(1, 1, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_85fvf"]
atlas = ExtResource("3_e6tu7")
region = Rect2(18, 1, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fnvjv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fudtn")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haacd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85fvf")
}],
"loop": true,
"name": &"Run",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7aah"]
size = Vector2(6, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0x6v"]
size = Vector2(6, 14)

[node name="GreenZombEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 4
floor_snap_length = 8.0
script = ExtResource("1_h5th0")

[node name="RunComponent" parent="." instance=ExtResource("1_waa7g")]
walkspeed = 125.0

[node name="OnJumpComponent" parent="." instance=ExtResource("2_72t3h")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fnvjv")
animation = &"Run"
autoplay = "Run"
frame_progress = 0.289198

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_q7aah")

[node name="InteractionHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_k0x6v")
debug_color = Color(0.698524, 0.277996, 1, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(3.2, 2.2)

[node name="JumpWhenWallComponent" type="Node2D" parent="."]
script = ExtResource("5_7gnpx")

[node name="RayCast2D" type="RayCast2D" parent="JumpWhenWallComponent"]
position = Vector2(0, 8)
rotation = 0.785398
target_position = Vector2(-32, 0)
collision_mask = 8

[node name="OnGroundPoundComponent" parent="." instance=ExtResource("6_knswg")]

[connection signal="jumped_on" from="OnJumpComponent" to="." method="_on_on_jump_component_jumped_on"]
[connection signal="body_entered" from="InteractionHitbox" to="." method="_on_interaction_hitbox_body_entered"]
[connection signal="body_entered" from="InteractionHitbox" to="OnJumpComponent" method="_on_interaction_hitbox_body_entered"]
[connection signal="body_entered" from="InteractionHitbox" to="OnGroundPoundComponent" method="_on_interaction_hitbox_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="ground_pound_on" from="OnGroundPoundComponent" to="." method="_on_on_ground_pound_component_ground_pound_on"]
